resources/app-sre/app-interface-dev/app-interface-internal.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-devshiftnet-dns
    haproxy.router.openshift.io/timeout: 32s
  labels:
    service: app-interface
  name: app-interface
spec:
  host: app-interface.dev.devshift.net
  to:
    kind: Service
    name: app-interface-nginx-gate
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
